Add Jumps and returns

--- a/sorted.ipynb
+++ b/sorted.ipynb
@@ -876,7 +876,9 @@
    "cell_type": "code",
    "execution_count": 36,
    "id": "4853a47b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -892,6 +894,113 @@
     "    val answer : Int = try { readLine()!!.toInt() } catch (e: Exception){ 42 }\n",
     "        finally { println(\"The answer is a number\") }   \n",
     "    println(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "306372a3",
+   "metadata": {},
+   "source": [
+    "#  Jumps and returns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "23330240",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before the loop\r\n",
+      "1\r\n",
+      "2\r\n",
+      "After the loop\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(\"Before the loop\")  \n",
+    "for (i in 1..10) {  \n",
+    "    if (i == 3) {  \n",
+    "        break  \n",
+    "    }  \n",
+    "    println(i)  \n",
+    "}  \n",
+    "println(\"After the loop\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b619c77d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i = 1, j = 1, k = 1\r\n",
+      "i = 1, j = 1, k = 2\r\n",
+      "i = 1, j = 1, k = 3\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "loop@ for (i in 1..3) {\n",
+    "    for (j in 1..3) {\n",
+    "        for (k in 1..3) {\n",
+    "            println(\"i = $i, j = $j, k = $k\")\n",
+    "            if (k == 3) break@loop\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4151de54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1122"
+     ]
+    }
+   ],
+   "source": [
+    "fun myin() {\n",
+    "    for (i in 1..3) {\n",
+    "        if (i == 1)\n",
+    "            continue\n",
+    "        print(1)\n",
+    "        loop@ for (j in 1..2) {\n",
+    "            for (k in 1..2) {\n",
+    "                if (i == 2 || j == 3) break@loop\n",
+    "                print(2)\n",
+    "            }\n",
+    "            if (j == 1) return\n",
+    "            print(3)\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "myin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe3b0444",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    va"
    ]
   }
  ],
