Added ASCII Text Signature code

--- a/sorted.ipynb
+++ b/sorted.ipynb
@@ -496,7 +496,9 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "a6335496",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -517,6 +519,39 @@
     "            else -> 'N'\n",
     "        }\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "a4c1a7b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:i123456\n",
+      "123457"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Scanner\n",
+    "\n",
+    "    val scanner = Scanner(System.`in`)\n",
+    "    if (scanner.hasNext()) {\n",
+    "        val input = scanner.nextLine()\n",
+    "        print(\n",
+    "            when (input.first()) {\n",
+    "                'i' -> input.substring(1).toInt() + 1\n",
+    "                's' -> input.substring(1).reversed()\n",
+    "                else -> input\n",
+    "            }\n",
+    "        )\n",
+    "    } else {\n",
+    "        print(\"\")\n",
+    "    }"
    ]
   },
   {
@@ -995,12 +1030,655 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "efd5140c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:hello\n",
+      "abcdfgijkmnpqrstuvwxyz"
+     ]
+    }
+   ],
+   "source": [
+    "    var result = \"abcdefghijklmnopqrstuvwxyz\"\n",
+    "    val input = readLine()!!\n",
+    "    for (letter in input) result = result.replace(letter.toString(), \"\")\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85354f34",
+   "metadata": {},
+   "source": [
+    "# Getting substrings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c04978e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bai\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "var example = \"Good morning\"    \n",
+    "example = example.replace(\"morning\", \"bye\")\n",
+    "example = \"bai\"\n",
+    "println(example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "386ce6a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GOOoD"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val a = \"GooD\"\n",
+    "a.substringBefore('o') + \"OO\" + a.substringAfter('o')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "93b8efff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val example = \"Example\"\n",
+    "example.substring(3, 7) == example.substring(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "300530d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Kotlin is a language"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val example = \"Kotlin is a language\"\n",
+    "example.replace(\" language\", \"n island\")\n",
+    "example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "cb534292",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:OIUoiuoO\n",
+      "stdin:oiuOIUOo\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "readLine()!!.lowercase() == readLine()!!.lowercase()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0e91dea3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:abcd\n",
+      "dbca"
+     ]
+    }
+   ],
+   "source": [
+    "    val str = readLine()!!\n",
+    "    print(str.substring(str.length - 1) + str.substring(1, str.length - 1) + str.substring(0, 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d14072e",
+   "metadata": {},
+   "source": [
+    "#  Processing strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "368de03a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " abcda"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val str1 = \"aaabbcccdaa\"\n",
+    "var str2 = \" \"\n",
+    "\n",
+    "for (ch in str1) {\n",
+    "    if (ch != str2.last()) {\n",
+    "        str2 += ch\n",
+    "    }\n",
+    "}\n",
+    "str2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c34364ec",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:3 3 3 12\n",
+      "WMWrqr585!@!"
+     ]
+    }
+   ],
+   "source": [
+    "    val input = readLine()!!.split(\" \").map { it.toInt() }.toMutableList()\n",
+    "    while (input[0] > 0) {\n",
+    "        print(if (input[3] % 2 == 0) \"W\" else \"M\")\n",
+    "        input[0]--\n",
+    "        input[3]--\n",
+    "    }\n",
+    "    while (input[1] > 0) {\n",
+    "        print(if (input[3] % 2 == 0) \"q\" else \"r\")\n",
+    "        input[1]--\n",
+    "        input[3]--\n",
+    "    }\n",
+    "    while (input[2] > 0) {\n",
+    "        print(if (input[3] % 2 == 0) \"5\" else \"8\")\n",
+    "        input[2]--\n",
+    "        input[3]--\n",
+    "    }\n",
+    "    while (input[3] > 0) {\n",
+    "        print(if (input[3] % 2 == 0) \"@\" else \"!\")\n",
+    "        input[3]--\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "3bffe147",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:biiiiig\n",
+      "2"
+     ]
+    }
+   ],
+   "source": [
+    "val BADROW = 3\n",
+    "\n",
+    "fun isVova(letter: Char) = when (letter) {\n",
+    "    'a', 'o', 'y', 'e', 'u', 'i' -> true\n",
+    "    else -> false\n",
+    "}\n",
+    "\n",
+    "    val word = readLine()!!\n",
+    "    var vova = isVova(word[0])\n",
+    "    var bad = 0\n",
+    "    var result = 0\n",
+    "    for (letter in word) {\n",
+    "        if (isVova(letter)) {\n",
+    "            if (vova) {\n",
+    "                bad++\n",
+    "            } else {\n",
+    "                bad = 1\n",
+    "                vova = true\n",
+    "            }\n",
+    "        } else {\n",
+    "            if (vova) {\n",
+    "                bad = 1\n",
+    "                vova = false\n",
+    "            } else {\n",
+    "                bad++\n",
+    "            }\n",
+    "        }\n",
+    "        if (bad == BADROW) {\n",
+    "            bad = 1\n",
+    "            result++\n",
+    "        }\n",
+    "    }\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f3e63591",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:Hello 3\n",
+      "loHel"
+     ]
+    }
+   ],
+   "source": [
+    "    val input = readLine()!!.split(\" \").map { it }.toMutableList()\n",
+    "    val n = input[1].toInt()\n",
+    "    if (n >= input[0].length) {\n",
+    "        print(input[0])\n",
+    "    } else {\n",
+    "        print(input[0].substring(n, input[0].length) + input[0].substring(0, n))\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fe3b0444",
+   "id": "3be5264d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "    va"
+    "fun r(value: Int, context: Any): Unit {\n",
+    "    println(value)\n",
+    "    print(context)\n",
+    "}\n",
+    "\n",
+    "fun square(value: Int, context: Any, continuation: (Int, Any) -> Unit) {\n",
+    "    return continuation(Math.sqrt(value.toDouble()), context)\n",
+    "}\n",
+    "\n",
+    "square(4, \"Hello\", r(9, \"Bye\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "99f0cbc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:123456\n",
+      "Regular"
+     ]
+    }
+   ],
+   "source": [
+    "    val n = readLine()!!\n",
+    "    var a = 0\n",
+    "    var b = 0\n",
+    "    for (digit in 0..5) {\n",
+    "        if (digit < 3) {\n",
+    "            a += n[digit] - '0'\n",
+    "        } else {\n",
+    "            b += n[digit] - '0'\n",
+    "        }\n",
+    "    }\n",
+    "    print(if (a == b) \"Lucky\" else \"Regular\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7851af7",
+   "metadata": {},
+   "source": [
+    "# Functions as objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5072d4c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\r\n",
+      "Hello"
+     ]
+    }
+   ],
+   "source": [
+    "fun f(value: Int, context: Any): Unit {\n",
+    "    println(value)\n",
+    "    print(context)\n",
+    "}\n",
+    "\n",
+    "fun square(value: Int, context: Any, continuation: (Int, Any) -> Unit) {\n",
+    "    continuation(value * value, context)\n",
+    "}\n",
+    "\n",
+    "square(4, \"Hello\", ::f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8317cb9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fun identity(a: Int)= a\n",
+    "\n",
+    "fun half(a: Int)= a / 2\n",
+    "\n",
+    "fun zero(a: Int)= 0\n",
+    "\n",
+    "fun generate(functionName: String): (Int) -> Int {\n",
+    "    return if (functionName == \"identity\") ::identity else if (functionName == \"half\") ::half else ::zero\n",
+    "}\n",
+    "\n",
+    "generate(\"identity\")(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d9c8596",
+   "metadata": {},
+   "source": [
+    "# Lambda expressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5f88314a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "720"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "    val lambda: (Long, Long) -> Long = {\n",
+    "        a, b -> \n",
+    "        var result = b\n",
+    "        for (i in a until b) result *= i\n",
+    "        \n",
+    "        result\n",
+    "    }\n",
+    "    lambda(2, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d62320db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\r\n",
+      "2\r\n",
+      "fizz\r\n",
+      "4\r\n",
+      "buzz\r\n",
+      "fizz\r\n",
+      "7\r\n",
+      "8\r\n",
+      "fizz\r\n",
+      "buzz\r\n",
+      "11\r\n",
+      "fizz\r\n",
+      "13\r\n",
+      "14\r\n",
+      "fizzbuzz\r\n",
+      "16\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "fun fizzbuzz(from: Int, to: Int, transformation: (Int) -> String) {\n",
+    "    for (number in from..to) {\n",
+    "        println(transformation(number))\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "    fizzbuzz(1, 16) { number ->\n",
+    "        if (number % 15 == 0) {\n",
+    "            return@fizzbuzz \"fizzbuzz\"\n",
+    "        }\n",
+    "        if (number % 3 == 0) {\n",
+    "            return@fizzbuzz \"fizz\"\n",
+    "        }\n",
+    "        if (number % 5 == 0) {\n",
+    "            return@fizzbuzz \"buzz\"\n",
+    "        }\n",
+    "        return@fizzbuzz number.toString()\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9bb6a7e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fun a(x: Int) = 3 * x\n",
+    "\n",
+    "fun b(x: Int) = x * x\n",
+    "\n",
+    "fun compose(g: (Int) -> Int, h: (Int) -> Int): (Int) -> Int {\n",
+    "    return {x -> g(h(x))}\n",
+    "}\n",
+    "\n",
+    "compose(::a, ::b)(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "114c2042",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "    val a = 1\n",
+    "    val b = 4\n",
+    "    val c = 10\n",
+    "    val lambda: (Int) -> Int = { a * it * it + b * it + c }\n",
+    "    lambda(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0dd35e7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var counter: () -> Int = { -42 }\n",
+    "\n",
+    "fun reinitializeCounter(): Int {\n",
+    "    var value = 0\n",
+    "    counter = { ++value }\n",
+    "    return value\n",
+    "}\n",
+    "\n",
+    "reinitializeCounter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a35ff35c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "    val lambda: (Int, Int) -> Int = { a, b -> Math.max(a, b) }\n",
+    "    lambda(6, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4ef73078",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "    val originalPredicate: (Char) -> Boolean = {it=='x'}\n",
+    "    \n",
+    "    val notPredicate: (Char) -> Boolean = { it -> !(originalPedicate(it)) }\n",
+    "    \n",
+    "    notPredicate('a')"
    ]
   }
  ],
