Add Number Base Converter code

--- a/sorted.ipynb
+++ b/sorted.ipynb
@@ -4090,6 +4090,337 @@
     "\n",
     "high.getLevel() > medium.getLevel()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad299daa",
+   "metadata": {},
+   "source": [
+    "# BigInteger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "eb42365a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import java.math.BigInteger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0138c620",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:6\n",
+      "55340232221128654848"
+     ]
+    }
+   ],
+   "source": [
+    "    print(\"9223372036854775808\".toBigInteger() * readLine()!!.toBigInteger())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "146270f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:2\n",
+      "stdin:3\n",
+      "3"
+     ]
+    }
+   ],
+   "source": [
+    "    val a = readLine()!!.toBigInteger()\n",
+    "    val b = readLine()!!.toBigInteger()\n",
+    "    print(if (a - b == (a - b).abs()) a else b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "606fbc80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:12345678908765\n",
+      "stdin:1243256574895\n",
+      "90% 9%"
+     ]
+    }
+   ],
+   "source": [
+    "    val a = readLine()!!.toBigInteger()\n",
+    "    val b = readLine()!!.toBigInteger()\n",
+    "    val sum = a + b\n",
+    "    print(\"${a * \"100\".toBigInteger() / sum}% ${b * \"100\".toBigInteger() / sum}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c572f633",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:4\n",
+      "stdin:6\n",
+      "12"
+     ]
+    }
+   ],
+   "source": [
+    "    val a = readLine()!!.toBigInteger()\n",
+    "    val b = readLine()!!.toBigInteger()\n",
+    "    print(a * b / a.gcd(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6d797ca6",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:-99999999999999999\n",
+      "stdin:10000000000000000\n",
+      "stdin:20000000000000000\n",
+      "stdin:999999999999999999999\n",
+      "999999999999000010000000000000001"
+     ]
+    }
+   ],
+   "source": [
+    "    val a = readLine()!!.toBigInteger()\n",
+    "    val b = readLine()!!.toBigInteger()\n",
+    "    val c = readLine()!!.toBigInteger()\n",
+    "    val d = readLine()!!.toBigInteger()\n",
+    "    print((-a) * b + c - d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "42131aaf",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:10000\n",
+      "stdin:10\n",
+      "10000 = 10 * 1000 + 0"
+     ]
+    }
+   ],
+   "source": [
+    "    val a = readLine()!!.toBigInteger()\n",
+    "    val b = readLine()!!.toBigInteger()\n",
+    "    val divs = a.divideAndRemainder(b)\n",
+    "    print(\"$a = $b * ${divs[0]} + ${divs[1]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac895e76",
+   "metadata": {},
+   "source": [
+    "#  BigDecimal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "82ea956d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import java.math.BigDecimal\n",
+    "import java.math.RoundingMode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "88b1a55a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:-3.5\n",
+      "stdin:0\n",
+      "-3"
+     ]
+    }
+   ],
+   "source": [
+    "    val n = BigDecimal(readLine()!!)\n",
+    "    val s = readLine()!!.toInt()\n",
+    "    print(n.setScale(s, RoundingMode.HALF_DOWN))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b77e6750",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:7.00000000000000000000000000000001\n",
+      "stdin:8.7777777777777772\n",
+      "stdin:1.999999999999999999999999999999999999\n",
+      "17.777777777777777200000000000000009999"
+     ]
+    }
+   ],
+   "source": [
+    "    val a = BigDecimal(readLine()!!)\n",
+    "    val b = BigDecimal(readLine()!!)\n",
+    "    val c = BigDecimal(readLine()!!)\n",
+    "    print(a + b + c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1b6d326f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:5\n",
+      "stdin:7\n",
+      "stdin:37526473596845785096598544.53653879640578\n",
+      "74419847553764131971306604121955997068263667521223929875384270904246170594749834378402002773234134253669551441686239041688640731.20299303904338981602574055560375707"
+     ]
+    }
+   ],
+   "source": [
+    "    var p = readLine()!!.toInt()\n",
+    "    val s = readLine()!!.toInt()\n",
+    "    var n = BigDecimal(readLine()!!)\n",
+    "    n = n.setScale(s, RoundingMode.FLOOR)\n",
+    "    var result = BigDecimal(\"1\")\n",
+    "    while (p > 0) {\n",
+    "        result *= n\n",
+    "        p--\n",
+    "    }\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "853ddd8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:100000000000000000000.000000000000001\n",
+      "stdin:-6\n",
+      "stdin:34364356335.00000001\n",
+      "33333333344788118776"
+     ]
+    }
+   ],
+   "source": [
+    "    val a = BigDecimal(readLine()!!)\n",
+    "    val b = BigDecimal(readLine()!!)\n",
+    "    val c = BigDecimal(readLine()!!)\n",
+    "    print(((a + b + c) / BigDecimal(\"3\")).setScale(0, RoundingMode.DOWN))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8bceab0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3.001"
+     ]
+    }
+   ],
+   "source": [
+    "var number = BigDecimal(\"2.001\")\n",
+    "number += BigDecimal.ONE\n",
+    "number = -number\n",
+    "number.setScale(1, RoundingMode.HALF_DOWN)\n",
+    "print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "adaaabd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:100000.2\n",
+      "stdin:20\n",
+      "stdin:1\n",
+      "Amount of money in the account: 120000.24"
+     ]
+    }
+   ],
+   "source": [
+    "    val startingAmount = BigDecimal(readLine()!!)\n",
+    "    val yearlyPercent = BigDecimal(readLine()!!)\n",
+    "    var years = readLine()!!.toInt()\n",
+    "    val n = BigDecimal.ONE + yearlyPercent.setScale(2 + yearlyPercent.scale()) / BigDecimal(\"100\")\n",
+    "    var result = BigDecimal.ONE\n",
+    "    while (years > 0) {\n",
+    "        result *= n\n",
+    "        years--\n",
+    "    }\n",
+    "    result *= startingAmount\n",
+    "    print(\"Amount of money in the account: ${result.setScale(2, RoundingMode.CEILING)}\")"
+   ]
   }
  ],
  "metadata": {
@@ -4105,7 +4436,7 @@
    "name": "kotlin",
    "nbconvert_exporter": "",
    "pygments_lexer": "kotlin",
-   "version": "1.6.20-dev-6372"
+   "version": "1.7.0-dev-1825"
   }
  },
  "nbformat": 4,
