Add Pawns-Only Chess code

--- a/sorted.ipynb
+++ b/sorted.ipynb
@@ -5397,7 +5397,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "8734de4f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -5464,6 +5466,111 @@
     "    val b = a.copy(length = length2)\n",
     "    println(a)\n",
     "    println(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cce9c00",
+   "metadata": {},
+   "source": [
+    "# Regexps "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6a9f0783",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "    val regex = Regex(\"\\\\.\\\\?\")\n",
+    "    \n",
+    "\".?\".matches(regex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "47b020de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\r\n",
+      "true\r\n",
+      "true\r\n",
+      "true\r\n",
+      "true\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "    val color = Regex(\"colou?rs?\")\n",
+    "\n",
+    "println(\"color\".matches(color))\n",
+    "println(\"colour\".matches(color))\n",
+    "println(\"colors\".matches(color))\n",
+    "println(\"colours\".matches(color))\n",
+    "println(!\"colooors\".matches(color))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3081e007",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "    val regex = Regex(\"\\\\\\\\\")\n",
+    "\n",
+    "\"\\\\\".matches(regex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8bdc8b28",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:10 wrong answers\n",
+      "false"
+     ]
+    }
+   ],
+   "source": [
+    "    val report = readLine()!!\n",
+    "    val regex = Regex(\". wrong answers?\")\n",
+    "    print(report.matches(regex))"
    ]
   }
  ],
