Add Watermark code

--- a/sorted.ipynb
+++ b/sorted.ipynb
@@ -1447,7 +1447,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "0e91dea3",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1461,6 +1463,35 @@
    "source": [
     "    val str = readLine()!!\n",
     "    print(str.substring(str.length - 1) + str.substring(1, str.length - 1) + str.substring(0, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "597a0ef4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:mururka\n",
+      "muruRKA"
+     ]
+    }
+   ],
+   "source": [
+    "val DELIMITER = 'u'\n",
+    "\n",
+    "    val input = readLine()!!\n",
+    "    val after = input.substringAfterLast(DELIMITER)\n",
+    "    print(\n",
+    "        if (after == input) {\n",
+    "            input\n",
+    "        } else {\n",
+    "            \"${input.substringBeforeLast(DELIMITER)}u${after.uppercase()}\"\n",
+    "        }\n",
+    "    )"
    ]
   },
   {
@@ -3528,6 +3559,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c5122fac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vivinyl\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "class VinylStore(val vinyl: String) {\n",
+    "    fun printVinyl() {\n",
+    "        println(this.vinyl)\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "val a = VinylStore(\"vivinyl\")\n",
+    "a.printVinyl()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3c0cfcd6",
    "metadata": {},
@@ -4238,6 +4294,36 @@
     "val medium = DangerLevel.MEDIUM\n",
     "\n",
     "high.getLevel() > medium.getLevel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ef627722",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUNDAY\r\n",
+      "MONDAY\r\n",
+      "TUESDAY\r\n",
+      "WEDNESDAY\r\n",
+      "THURSDAY\r\n",
+      "FRIDAY\r\n",
+      "SATURDAY\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "enum class DaysOfTheWeek() {\n",
+    "    SUNDAY, MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY,\n",
+    "}\n",
+    "\n",
+    "    for (day in DaysOfTheWeek.values()) {\n",
+    "        println(day)\n",
+    "    }"
    ]
   },
   {
@@ -5555,7 +5641,7 @@
    "execution_count": 11,
    "id": "8bdc8b28",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -5572,6 +5658,75 @@
     "    val regex = Regex(\". wrong answers?\")\n",
     "    print(report.matches(regex))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "babc4261",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stdin:I can't do my homework on time!\n",
+      "true"
+     ]
+    }
+   ],
+   "source": [
+    "    val answer = readLine()!!\n",
+    "    val regex = Regex(\"I can('t)? do my homework on time!\")\n",
+    "    print(answer.matches(regex))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adc2461b",
+   "metadata": {},
+   "source": [
+    "# Debugging techniques"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7e95fb3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before: dummy\r\n",
+      "After: Dummy\r\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Dummy"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fun String?.capitalize(): String? {\n",
+    "    println(\"Before: $this\")\n",
+    "    val result = when {\n",
+    "        isNullOrBlank() -> this\n",
+    "        length == 1 -> uppercase()\n",
+    "        else -> this[0].uppercase() + substring(1)\n",
+    "    }\n",
+    "    println(\"After: $result\")\n",
+    "    return result\n",
+    "}\n",
+    "\n",
+    "\"dummy\".capitalize()"
+   ]
   }
  ],
  "metadata": {
@@ -5587,7 +5742,7 @@
    "name": "kotlin",
    "nbconvert_exporter": "",
    "pygments_lexer": "kotlin",
-   "version": "1.7.0-dev-1825"
+   "version": "1.7.20-dev-1299"
   }
  },
  "nbformat": 4,
